# MMT

cli/: cluster.py
cli/mt/: moses.py  phrasetable.py
src/: pom.xml
src/cmake_modules/: FindRocksdb.cmake
src/common-interfaces/: pom.xml
src/common-interfaces/native/: CMakeLists.txt
src/common-interfaces/native/include/mmt/logging/: Log.cpp  Log.h
src/interpolated-lm/: pom.xml
src/interpolated-lm/native/: CMakeLists.txt
src/interpolated-lm/native/cmake_modules/: FindRocksdb.cmake
src/interpolated-lm/native/db/: NGramStorage.cpp  NGramStorage.h
src/interpolated-lm/native/lm/: AdaptiveLM.cpp  AdaptiveLM.h  CMakeLists.txt  CachedLM.h  InterpolatedLM.cpp  InterpolatedLM.h  LM.h  Options.h  StaticLM.cpp  StaticLM.h  Timer.cpp  Timer.h  usage.cc  usage.hh
src/moses-decoder/: pom.xml
src/moses-decoder/native/: CMakeLists.txt
src/moses-decoder/native/cmake_modules/: FindMMTCommons.cmake  FindROCKSDB.cmake  FindRocksdb.cmake
src/moses-decoder/native/decoder/: CMakeLists.txt  MemPool.cpp  MemPool.h  Phrase.h  SubPhrase.h  System.cpp  System.h  TranslationTask.cpp
src/moses-decoder/native/decoder/DummySCFG/: DummySCFG.h
src/moses-decoder/native/decoder/FF/: FeatureFunction.cpp  FeatureFunctions.cpp  FeatureFunctions.h  FeatureRegistry.cpp  FeatureRegistry.h  WordPenalty.cpp
src/moses-decoder/native/decoder/FF/LexicalReordering/: LexicalReordering.cpp  LexicalReordering.h
src/moses-decoder/native/decoder/LM/: MMTInterpolatedLM.cpp  MMTInterpolatedLM.h
src/moses-decoder/native/decoder/PhraseBased/: Manager.cpp  Manager.h
src/moses-decoder/native/decoder/TranslationModel/: PhraseTable.cpp  PhraseTableSADB.cpp  PhraseTableSADB.h  UnknownWordPenalty.cpp
src/moses-decoder/native/decoder/cmake/: FindRocksdb.cmake
src/moses-decoder/native/decoder/legacy/: FactorCollection.cpp  Logger.cpp  Logger.h  Parameter.cpp
src/moses-decoder/native/decoder/legacy/moses/: Util.h
src/moses-decoder/native/decoder/mmt/: MosesDecoder.cpp
src/moses-decoder/native/decoder/parameters/: AllOptions.cpp  AllOptions.h  ContextParameters.h  NBestOptions.cpp  Options.cpp  ServerOptions.h  SyntaxOptions.h
src/moses-decoder/native/executables/: Main.cpp  moses2-main.cpp  moses2-test.cpp
src/moses-decoder/native/java/: eu_modernmt_decoder_moses_MosesDecoder.cpp
src/moses-decoder/native/mertdir/: CMakeLists.txt  ScorerFactory.cpp  mert.cpp
src/moses-decoder/native/moses2/: CMakeLists.txt  System.h  TranslationTask.h
src/moses-decoder/native/moses2/LM/: MMTInterpolatedLM.cpp
src/moses-decoder/native/moses2/TranslationModel/: PhraseTableSADB.cpp
src/moses-decoder/native/moses2/mmt/: MosesDecoder.cpp
src/moses-decoder/src/main/java/eu/modernmt/decoder/moses/: MosesDecoder.java
src/rocksdb-vocabulary/: pom.xml
src/rocksdb-vocabulary/native/cmake_modules/: FindRocksdb.cmake
src/suffixarray-phrasetable/: pom.xml
src/suffixarray-phrasetable/native/: CMakeLists.txt
src/suffixarray-phrasetable/native/cmake_modules/: FindRocksdb.cmake
src/suffixarray-phrasetable/native/sapt/: PhraseTable.cpp  PhraseTable.h  TranslationOptionBuilder.cpp  TranslationOptionBuilder.h
src/suffixarray-phrasetable/native/suffixarray/: Collector.cpp  Collector.h
src/suffixarray-phrasetable/native/util/: Timer.cpp  Timer.h  usage.cc  usage.hh
