cmake_minimum_required(VERSION 3.2)
project(moses2)

# Moses definitions
add_definitions(-DMAX_NUM_FACTORS=1 -DKENLM_MAX_ORDER=6 -DWITH_THREADS)

include_directories(.)
include_directories(legacy)

set(MOSES2_SOURCE_FILES
    FF/LexicalReordering/BidirectionalReorderingState.cpp
    FF/LexicalReordering/BidirectionalReorderingState.h
    FF/LexicalReordering/HReorderingBackwardState.cpp
    FF/LexicalReordering/HReorderingBackwardState.h
    FF/LexicalReordering/HReorderingForwardState.cpp
    FF/LexicalReordering/HReorderingForwardState.h
    FF/LexicalReordering/LexicalReordering.cpp
    FF/LexicalReordering/LexicalReordering.h
    FF/LexicalReordering/LRModel.cpp
    FF/LexicalReordering/LRModel.h
    FF/LexicalReordering/LRState.cpp
    FF/LexicalReordering/LRState.h
    FF/LexicalReordering/PhraseBasedReorderingState.cpp
    FF/LexicalReordering/PhraseBasedReorderingState.h
    FF/LexicalReordering/ReorderingStack.cpp
    FF/LexicalReordering/ReorderingStack.h
    FF/Distortion.cpp
    FF/Distortion.h
    FF/FeatureFunction.cpp
    FF/FeatureFunction.h
    FF/FeatureFunctions.cpp
    FF/FeatureFunctions.h
    FF/FeatureRegistry.cpp
    FF/FeatureRegistry.h
    FF/FFState.cpp
    FF/FFState.h
    FF/PhrasePenalty.cpp
    FF/PhrasePenalty.h
    FF/PointerState.cpp
    FF/PointerState.h
    FF/StatefulFeatureFunction.cpp
    FF/StatefulFeatureFunction.h
    FF/StatelessFeatureFunction.cpp
    FF/StatelessFeatureFunction.h
    FF/WordPenalty.cpp
    FF/WordPenalty.h
    legacy/Bitmap.cpp
    legacy/Bitmap.h
    legacy/Bitmaps.cpp
    legacy/Bitmaps.h
    legacy/util/exception.cc
    legacy/util/string_piece.cc
    legacy/util/pool.cc
    legacy/util/scoped.cc
    legacy/util/usage.cc
    legacy/util/murmur_hash.cc
    legacy/Factor.cpp
    legacy/Factor.h
    legacy/FactorCollection.cpp
    legacy/FactorCollection.h
    legacy/gzfilebuf.h
    legacy/InputFileStream.cpp
    legacy/InputFileStream.h
    legacy/Matrix.cpp
    legacy/Matrix.h
    legacy/OutputCollector.h
    legacy/OutputFileStream.cpp
    legacy/OutputFileStream.h
    legacy/Parameter.cpp
    legacy/Parameter.h
    legacy/Range.cpp
    legacy/Range.h
    legacy/ThreadPool.cpp
    legacy/ThreadPool.h
    legacy/Timer.cpp
    legacy/Timer.h
    legacy/Util2.cpp
    legacy/Util2.h
    LM/MMTInterpolatedLM.cpp
    LM/MMTInterpolatedLM.h
    mmt/MosesDecoder.cpp
    MorphoTrie/MorphTrie.h
    MorphoTrie/Node.h
    MorphoTrie/utils.h
    parameters/Options.cpp
    parameters/AllOptions.h
    parameters/BeamSearchOptions.h
    parameters/BookkeepingOptions.h
    parameters/CubePruningOptions.h
    parameters/InputOptions.h
    parameters/LMBR_Options.h
    parameters/LookupOptions.h
    parameters/MBR_Options.h
    parameters/NBestOptions.h
    parameters/OOVHandlingOptions.h
    parameters/OptionsBaseClass.h
    parameters/ReorderingOptions.h
    parameters/ReportingOptions.h
    parameters/SearchOptions.h
    parameters/ServerOptions.h
    parameters/SyntaxOptions.h
    PhraseBased/Batch/Search.cpp
    PhraseBased/Batch/Search.h
    PhraseBased/Batch/Stack.cpp
    PhraseBased/Batch/Stack.h
    PhraseBased/Batch/Stacks.cpp
    PhraseBased/Batch/Stacks.h
    PhraseBased/CubePruningMiniStack/Misc.cpp
    PhraseBased/CubePruningMiniStack/Misc.h
    PhraseBased/CubePruningMiniStack/Search.cpp
    PhraseBased/CubePruningMiniStack/Search.h
    PhraseBased/CubePruningMiniStack/Stack.cpp
    PhraseBased/CubePruningMiniStack/Stack.h
    PhraseBased/Normal/Search.cpp
    PhraseBased/Normal/Search.h
    PhraseBased/Normal/Stack.cpp
    PhraseBased/Normal/Stack.h
    PhraseBased/Normal/Stacks.cpp
    PhraseBased/Normal/Stacks.h
    PhraseBased/Hypothesis.cpp
    PhraseBased/Hypothesis.h
    PhraseBased/InputPath.cpp
    PhraseBased/InputPath.h
    PhraseBased/InputPaths.cpp
    PhraseBased/InputPaths.h
    PhraseBased/Manager.cpp
    PhraseBased/Manager.h
    PhraseBased/PhraseImpl.cpp
    PhraseBased/PhraseImpl.h
    PhraseBased/ReorderingConstraint.cpp
    PhraseBased/ReorderingConstraint.h
    PhraseBased/Search.cpp
    PhraseBased/Search.h
    PhraseBased/Sentence.cpp
    PhraseBased/Sentence.h
    PhraseBased/TargetPhraseImpl.cpp
    PhraseBased/TargetPhraseImpl.h
    PhraseBased/TargetPhrases.cpp
    PhraseBased/TargetPhrases.h
    PhraseBased/TrellisPath.cpp
    PhraseBased/TrellisPath.h
    TranslationModel/PhraseTable.cpp
    TranslationModel/PhraseTable.h
    TranslationModel/PhraseTableSADB.cpp
    TranslationModel/PhraseTableSADB.h
    TranslationModel/UnknownWordPenalty.cpp
    TranslationModel/UnknownWordPenalty.h
    AlignmentInfo.cpp
    AlignmentInfo.h
    AlignmentInfoCollection.cpp
    AlignmentInfoCollection.h
    ArcLists.cpp
    ArcLists.h
    Array.h
    EstimatedScores.cpp
    EstimatedScores.h
    HypothesisBase.cpp
    HypothesisBase.h
    HypothesisColl.cpp
    HypothesisColl.h
    InputPathBase.cpp
    InputPathBase.h
    InputPathsBase.cpp
    InputPathsBase.h
    InputType.cpp
    InputType.h
        moses2-main.h
    ManagerBase.cpp
    ManagerBase.h
    MemPool.cpp
    MemPool.h
    Phrase.cpp
    Phrase.h
    PhraseImplTemplate.h
    pugiconfig.hpp
    pugixml.cpp
    pugixml.hpp
    Recycler.cpp
    Recycler.h
    Scores.cpp
    Scores.h
    SubPhrase.cpp
    SubPhrase.h
    System.cpp
    System.h
    TargetPhrase.cpp
    TargetPhrase.h
    TranslationTask.cpp
    TranslationTask.h
    TrellisPaths.cpp
    TrellisPaths.h
    TypeDef.cpp
    TypeDef.h
    Vector.cpp
    Vector.h
    Weights.cpp
    Weights.h
    Word.cpp
    Word.h mmt/Translator.h DummySCFG/DummySCFG.h)

add_library(moses2 OBJECT ${MOSES2_SOURCE_FILES})
